--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ compileTestKotlin { kotlinOptions { jvmTarget = "$jvm_target" } }
 mainClassName = 'com.fernandocejas.crackinginterview.MainKt'
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-  testCompile "org.jetbrains.kotlin:kotlin-test"
-  testCompile "org.jetbrains.kotlin:kotlin-test-junit"
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+  testImplementation 'org.amshove.kluent:kluent:1.42'
 }
